# artifacts/api-server/src/routes/index.ts
@@ -9,6 +9,7 @@ import notificationsRouter from "./notifications";
 import aiRouter from "./ai";
 import sessionsRouter from "./sessions";
 import favouritesRouter from "./favourites";
+import dashboardRouter from "./dashboard";
 
 const router: IRouter = Router();
 
@@ -21,6 +22,7 @@ router.use(vehiclesRouter);
 router.use(notificationsRouter);
 router.use(sessionsRouter);
 router.use(favouritesRouter);
+router.use(dashboardRouter);
 router.use(aiRouter);
 
 export default router;
